changed to isBlank() and removed casting